# saubol

./: .dockerignore  .env.example  .env.sxample  .gitignore  Dockerfile  README.md  TESTING.md  agent.py  docker-compose.yml  example_agent.py  mkb10.csv  pyproject.toml  summary.txt  test_client.py
src/: __init__.py  main.py
src/agents/: role_agent.py  role_validator_agent.py  summary_agent.py  transcription_agent.py  transcription_agent_all_users.py
src/core/: __init__.py  dependencies.py  settings.py
src/prompts/: role_agent.py  role_validator_agent.py  summary_agent.py
src/routers/: __init__.py  document.py  rooms.py  transcription.py
src/schemas/: __init__.py  agent_output.py  livekit.py  protocol.py
src/services/: agent.py  mkb_10.py  one_user_pipeline.py  transcription.py
src/utils/: auth.py  file_saver.py  room.py
