[project]
name = "assanov-first"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "livekit>=1.0.17",
    "livekit-api>=1.0.7",
    "numpy>=2.3.4",
    "openai>=2.4.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.37.0",
]
